syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

package gelu.orders.v1;
option go_package = "./;pb";

service OrdersService {
    rpc Create(CreateOrderRequest) returns (CreateOrderResponse) {
        option (google.api.http) = {
            post: "/v1/orders"
            body: "*"
          };
    };

    rpc GetAll(GetAllOrdersRequests) returns (GetAllOrdersResponse) {
        option (google.api.http) = {
            get: "/v1/orders"
          };
    };

    rpc FindByID(FindByIDRequests) returns (FindByIDResponse) {
        option (google.api.http) = {
            get: "/v1/orders/{id}"
          };
    };

    rpc UpdateByID(UpdateByIDRequests) returns (UpdateByIDResponse) {
        option (google.api.http) = {
            put: "/v1/orders/{order.id}"
            body: "*"
          };
    };

    rpc DeleteByID(DeleteByIDRequests) returns (DeleteByIDResponse) {
        option (google.api.http) = {
            delete: "/v1/orders/{id}"
          };
    };
}

message Order {
    string id = 1;
    string details = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4; 
}

message CreateOrderRequest {
    string details = 1;
}

message CreateOrderResponse{
    Order order = 1;
}

message GetAllOrdersRequests{}

message GetAllOrdersResponse{
    repeated Order orders = 1;
}

message FindByIDRequests{
    string id = 1;
}

message FindByIDResponse{
    Order order = 1;
}

message UpdateByIDRequests{
    Order order = 1;
}

message UpdateByIDResponse{
    Order order = 1;
}

message DeleteByIDRequests{
    string id = 1;
}

message DeleteByIDResponse{
    string id = 1;
}